<resources>
    <string name="app_name">GeoQuiz</string>
    <string name="question1">Constantinople is the largest city in turkey</string>
    <string name="question2">Pacific Ocean is larger than the Atlantic Ocean</string>
    <string name="question3">the Suez Canal connects the Red Sea and Indian Ocean</string>
    <string name="question4">The Source of Nile river is in Egypt</string>
    <string name="question5">The Amazon is the longest river in America</string>
    <string name="question6">Lake Baikal is the world\'s oldest and deepest freshwater lake</string>
    <string name="true_btn">True</string>
    <string name="false_btn">False</string>
    <string name="next_btn">Next</string>
    <string name="cheat">Cheat!</string>
    <string name="warning">Are you sure you want to do this?</string>
    <string name="answer">Show Answer</string>
    <string name="toast">Cheating is wrong!</string>
</resources>
